--- a/supporting-blog-content/utilizing-phi3-models/utilizing_phi3_models.ipynb
+++ b/supporting-blog-content/utilizing-phi3-models/utilizing_phi3_models.ipynb
@@ -352,11 +352,8 @@
       "source": [
         "# This function will create a bulk object for the given id and body\n",
         "def build_bulk_obj(id, body):\n",
-        "    return {\n",
-        "        \"_index\": \"lasticco-menu\",\n",
-        "        \"_id\": id,\n",
-        "        \"_source\": body\n",
-        "    }\n",
+        "    return {\"_index\": \"lasticco-menu\", \"_id\": id, \"_source\": body}\n",
+        "\n",
         "\n",
         "data = []\n",
         "\n",
@@ -381,7 +378,7 @@
       "source": [
         "### Retrieving relevant dishes\n",
         "\n",
-        "We use a semantic query to retrieve the most relevant dishes based on the customer request."
+        "We use a semantic query to retrieve the most relevant dishes based on the customer request.\n"
       ]
     },
     {
@@ -1046,7 +1043,7 @@
       "source": [
         "### Putting everything together\n",
         "\n",
-        "With this script we can ask the user to order, and keep the status of the order updated."
+        "With this script we can ask the user to order, and keep the status of the order updated.\n"
       ]
     },
     {
@@ -1236,17 +1233,17 @@
         "\n",
         "    try:\n",
         "        response = es_client.search(\n",
-        "          index=\"lasticco-menu\",\n",
-        "          body={\n",
-        "              \"size\": 3,\n",
-        "              \"_source\": {\"excludes\": [\"*embeddings\", \"*chunks\", \"*inference\"]},\n",
-        "              \"query\": {\n",
-        "                  \"semantic\": {\n",
-        "                      \"field\": \"description\",\n",
-        "                      \"query\": query,\n",
-        "                  }\n",
-        "              },\n",
-        "          },\n",
+        "            index=\"lasticco-menu\",\n",
+        "            body={\n",
+        "                \"size\": 3,\n",
+        "                \"_source\": {\"excludes\": [\"*embeddings\", \"*chunks\", \"*inference\"]},\n",
+        "                \"query\": {\n",
+        "                    \"semantic\": {\n",
+        "                        \"field\": \"description\",\n",
+        "                        \"query\": query,\n",
+        "                    }\n",
+        "                },\n",
+        "            },\n",
         "        )\n",
         "\n",
         "        dishes = []\n",
@@ -1260,30 +1257,18 @@
         "                {\n",
         "                    \"code\": \"carbonara\",\n",
         "                    \"qty\": 1,\n",
-        "                    \"customizations\": [\n",
-        "                        {\n",
-        "                          \"vegetarian\": True\n",
-        "                        }\n",
-        "                    ]\n",
+        "                    \"customizations\": [{\"vegetarian\": True}],\n",
         "                },\n",
         "                {\n",
         "                    \"code\": \"alfredo\",\n",
         "                    \"qty\": 2,\n",
-        "                    \"customizations\": [\n",
-        "                        {\n",
-        "                          \"extras\": [\"cheese\"]\n",
-        "                        }\n",
-        "                    ]\n",
+        "                    \"customizations\": [{\"extras\": [\"cheese\"]}],\n",
         "                },\n",
         "                {\n",
         "                    \"code\": \"gnocchi\",\n",
         "                    \"qty\": 1,\n",
-        "                    \"customizations\": [\n",
-        "                        {\n",
-        "                          \"extras\": [\"mushrooms\"]\n",
-        "                        }\n",
-        "                    ]\n",
-        "                }\n",
+        "                    \"customizations\": [{\"extras\": [\"mushrooms\"]}],\n",
+        "                },\n",
         "            ],\n",
         "        }\n",
         "\n",
@@ -1328,7 +1313,9 @@
         "        print(f\"Result: \\n {completion_result}\\n\")\n",
         "\n",
         "        current_order = json.loads(response[\"completion\"][0][\"result\"])\n",
-        "        print(f\"The current order status is: \\n {json.dumps(current_order, indent=2)}\\n\")\n",
+        "        print(\n",
+        "            f\"The current order status is: \\n {json.dumps(current_order, indent=2)}\\n\"\n",
+        "        )\n",
         "\n",
         "    except Exception as e:\n",
         "        print(e)"
