Fix client usage of the Inference API

--- a/notebooks/search/07-inference.ipynb
+++ b/notebooks/search/07-inference.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "API_KEY = getpass(\"OpenAI API key:  \")\n",
     "\n",
-    "client.inference.put_model(\n",
+    "client.inference.put(\n",
     "    task_type=\"text_embedding\",\n",
     "    inference_id=\"my_openai_embedding_model\",\n",
     "    body={\n",
@@ -211,7 +211,7 @@
    "id": "1f2e48b7",
    "metadata": {},
    "source": [
-    "**NOTE:** If you use Elasticsearch 8.12, you must change `inference_id` in the snippet above to `model_id`! "
+    "**NOTE:** If you use Elasticsearch 8.12, you must change `inference_id` in the snippet above to `model_id`! And `inference.put` to `inference.put_model`."
    ]
   },
   {
@@ -409,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.12.3 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -423,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.5"
   },
   "vscode": {
    "interpreter": {
