--- a/notebooks/search/10-semantic-reranking-retriever-cohere.ipynb
+++ b/notebooks/search/10-semantic-reranking-retriever-cohere.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "id": "c2907fddfeac343a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Semantic Reranking with Cohere Reranker\n",
@@ -20,7 +23,10 @@
    "cell_type": "markdown",
    "id": "3db37d2cf8264468",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Requirements\n",
@@ -40,7 +46,10 @@
    "cell_type": "markdown",
    "id": "7fe1ed0703a8d1d3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Create Elastic Cloud deployment\n",
@@ -52,7 +61,10 @@
    "cell_type": "markdown",
    "id": "f9c8bd62c8241f90",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Install packages and connect with Elasticsearch Client\n",
@@ -68,7 +80,10 @@
    "execution_count": null,
    "id": "13fdf7656ced2da3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -79,7 +94,10 @@
    "cell_type": "markdown",
    "id": "9d54b112361d2f3d",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Next, we need to import the modules we need.\n",
@@ -92,7 +110,10 @@
    "execution_count": null,
    "id": "9a60627704e77ff6",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -106,7 +127,10 @@
    "cell_type": "markdown",
    "id": "eb9498124146d8bb",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Now we can instantiate the Python Elasticsearch client.\n",
@@ -120,7 +144,10 @@
    "execution_count": null,
    "id": "6e14437dcce0f235",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -143,7 +170,10 @@
    "cell_type": "markdown",
    "id": "89b6b7721f6d8599",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Enable telemetry\n",
@@ -156,7 +186,10 @@
    "execution_count": null,
    "id": "5a7af618fb61f358",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -170,7 +203,10 @@
    "cell_type": "markdown",
    "id": "cbbdaf9118a97732",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Test the Client\n",
@@ -183,7 +219,10 @@
    "execution_count": null,
    "id": "4cb0685fae12e034",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -194,7 +233,10 @@
    "cell_type": "markdown",
    "id": "59e2223bf2c4331",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Refer to [the documentation](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html#connect-self-managed-new) to learn how to connect to a self-managed deployment.\n",
@@ -228,7 +270,10 @@
    "cell_type": "markdown",
    "id": "22fa643780acd44a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Create the Inference Endpoint\n",
@@ -246,7 +291,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    client.inference.delete_model(inference_id=\"cohere-rerank-inference\")\n",
+    "    client.inference.delete(inference_id=\"cohere-rerank-inference\")\n",
     "except exceptions.NotFoundError:\n",
     "    # Inference endpoint does not exist\n",
     "    pass\n",
@@ -254,10 +299,10 @@
     "try:\n",
     "    client.options(\n",
     "        request_timeout=60, max_retries=3, retry_on_timeout=True\n",
-    "    ).inference.put_model(\n",
+    "    ).inference.put(\n",
     "        task_type=\"rerank\",\n",
     "        inference_id=\"cohere-rerank-inference\",\n",
-    "        model_config={\n",
+    "        inference_config={\n",
     "            \"service\": \"cohere\",\n",
     "            \"service_settings\": {\n",
     "                \"api_key\": COHERE_API_KEY,\n",
@@ -277,7 +322,10 @@
    "cell_type": "markdown",
    "id": "818f7a72a83b5776",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Create the Index\n",
@@ -290,7 +338,10 @@
    "execution_count": null,
    "id": "ace87760606f67c6",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -310,7 +361,10 @@
    "cell_type": "markdown",
    "id": "2b5a46b60660a489",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Populate the Index\n",
@@ -323,7 +377,10 @@
    "execution_count": null,
    "id": "24f0133923553d28",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -342,7 +399,10 @@
    "cell_type": "markdown",
    "id": "6fff5932fcbac1b0",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Search without reranking\n",
@@ -360,7 +420,10 @@
    "execution_count": null,
    "id": "ad417b4b3f50c889",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -531,7 +594,10 @@
    "cell_type": "markdown",
    "id": "22c4d4d395adb472",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Much better! Not only are the top results semantically close to our query _\"the Moon covers the Sun\"_, the irrelevant results with a low score were discarded from the response. As a result, the list of articles we ended up with are indeed those that provide the best answer to our question.\n",
@@ -545,7 +611,10 @@
    "cell_type": "markdown",
    "id": "78be304240d6c695",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Conclusion\n",
@@ -556,7 +625,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -570,7 +639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
