--- a/notebooks/search/09-semantic-text.ipynb
+++ b/notebooks/search/09-semantic-text.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "id": "c2907fddfeac343a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "# Semantic Search with Semantic Text\n",
@@ -18,7 +21,10 @@
    "cell_type": "markdown",
    "id": "3db37d2cf8264468",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Requirements\n",
@@ -35,7 +41,10 @@
    "cell_type": "markdown",
    "id": "7fe1ed0703a8d1d3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Create Elastic Cloud deployment\n",
@@ -47,7 +56,10 @@
    "cell_type": "markdown",
    "id": "f9c8bd62c8241f90",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Install packages and connect with Elasticsearch Client\n",
@@ -65,7 +77,10 @@
    "execution_count": null,
    "id": "13fdf7656ced2da3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -76,7 +91,10 @@
    "cell_type": "markdown",
    "id": "9d54b112361d2f3d",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Next, we need to import the modules we need. \n",
@@ -89,7 +107,10 @@
    "execution_count": null,
    "id": "9a60627704e77ff6",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -104,7 +125,10 @@
    "cell_type": "markdown",
    "id": "eb9498124146d8bb",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Now we can instantiate the Python Elasticsearch client.\n",
@@ -118,7 +142,10 @@
    "execution_count": null,
    "id": "6e14437dcce0f235",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -141,7 +168,10 @@
    "cell_type": "markdown",
    "id": "89b6b7721f6d8599",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Enable Telemetry\n",
@@ -154,7 +184,10 @@
    "execution_count": null,
    "id": "5a7af618fb61f358",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -168,7 +201,10 @@
    "cell_type": "markdown",
    "id": "cbbdaf9118a97732",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Test the Client\n",
@@ -180,7 +216,10 @@
    "execution_count": null,
    "id": "4cb0685fae12e034",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -191,7 +230,10 @@
    "cell_type": "markdown",
    "id": "59e2223bf2c4331",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Refer to [the documentation](https://www.elastic.co/guide/en/elasticsearch/client/python-api/current/connecting.html#connect-self-managed-new) to learn how to connect to a self-managed deployment.\n",
@@ -203,7 +245,10 @@
    "cell_type": "markdown",
    "id": "22fa643780acd44a",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Create the Inference Endpoint\n",
@@ -218,12 +263,15 @@
    "execution_count": null,
    "id": "8ee2188ea71324f5",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
     "try:\n",
-    "    client.inference.delete_model(inference_id=\"my-elser-endpoint\")\n",
+    "    client.inference.delete(inference_id=\"my-elser-endpoint\")\n",
     "except exceptions.NotFoundError:\n",
     "    # Inference endpoint does not exist\n",
     "    pass\n",
@@ -231,7 +279,7 @@
     "try:\n",
     "    client.options(\n",
     "        request_timeout=60, max_retries=3, retry_on_timeout=True\n",
-    "    ).inference.put_model(\n",
+    "    ).inference.put(\n",
     "        task_type=\"sparse_embedding\",\n",
     "        inference_id=\"my-elser-endpoint\",\n",
     "        body={\n",
@@ -251,7 +299,10 @@
    "cell_type": "markdown",
    "id": "e94fd66761fd8087",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Once the endpoint is created, we must wait until the backing ELSER service is deployed.\n",
@@ -263,13 +314,14 @@
    "execution_count": null,
    "id": "adb33329ce20b2f1",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
-    "inference_endpoint_info = client.inference.get_model(\n",
-    "    inference_id=\"my-elser-endpoint\",\n",
-    ")\n",
+    "inference_endpoint_info = client.inference.get(inference_id=\"my-elser-endpoint\")\n",
     "model_id = inference_endpoint_info[\"endpoints\"][0][\"service_settings\"][\"model_id\"]\n",
     "\n",
     "while True:\n",
@@ -296,7 +348,10 @@
    "cell_type": "markdown",
    "id": "818f7a72a83b5776",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Create the Index\n",
@@ -309,7 +364,10 @@
    "execution_count": null,
    "id": "ace87760606f67c6",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -334,7 +392,10 @@
    "cell_type": "markdown",
    "id": "abc3ee7a1fddfa9b",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "Notice how we configured the mappings. We defined `plot_semantic` as a `semantic_text` field.\n",
@@ -346,7 +407,10 @@
    "cell_type": "markdown",
    "id": "2b5a46b60660a489",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Populate the Index\n",
@@ -359,7 +423,10 @@
    "execution_count": null,
    "id": "24f0133923553d28",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -378,7 +445,10 @@
    "cell_type": "markdown",
    "id": "6fff5932fcbac1b0",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Semantic Search\n",
@@ -396,7 +466,10 @@
    "execution_count": null,
    "id": "ad417b4b3f50c889",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -423,7 +496,10 @@
    "cell_type": "markdown",
    "id": "22c4d4d395adb472",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Semantic Search with the `semantic` Query\n",
@@ -437,7 +513,10 @@
    "execution_count": null,
    "id": "1a8520ffc8a3efb3",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -453,7 +532,10 @@
    "cell_type": "markdown",
    "id": "148fda24a3964aa9",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "These results demonstrate the power of semantic search.\n",
@@ -469,7 +551,10 @@
    "cell_type": "markdown",
    "id": "7c9bab225a745746",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "### Hybrid Search with the `semantic` Query\n",
@@ -483,7 +568,10 @@
    "execution_count": null,
    "id": "4f72f7906b918dc1",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -516,7 +604,10 @@
    "cell_type": "markdown",
    "id": "d50d10ced4389107",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "These results demonstrate that the application of lexical search techniques can help focus the results, while retaining many of the advantages of semantic search.\n",
@@ -536,7 +627,10 @@
    "cell_type": "markdown",
    "id": "78be304240d6c695",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "source": [
     "## Conclusion\n",
@@ -548,21 +642,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
