Update one output and improve one debug call

--- a/notebooks/search/11-semantic-reranking-hugging-face.ipynb
+++ b/notebooks/search/11-semantic-reranking-hugging-face.ipynb
@@ -322,7 +322,7 @@
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'endpoints': [{'model_id': 'my-msmarco-minilm-model', 'inference_id': 'my-msmarco-minilm-model', 'task_type': 'rerank', 'service': 'elasticsearch', 'service_settings': {'num_allocations': 1, 'num_threads': 1, 'model_id': 'cross-encoder__ms-marco-minilm-l-6-v2'}, 'task_settings': {'return_documents': True}}]})"
+       "ObjectApiResponse({'inference_id': 'my-msmarco-minilm-model', 'task_type': 'rerank', 'service': 'elasticsearch', 'service_settings': {'num_allocations': 1, 'num_threads': 1, 'model_id': 'cross-encoder__ms-marco-minilm-l-6-v2'}, 'task_settings': {'return_documents': True}})"
       ]
      },
      "execution_count": 20,
@@ -358,7 +358,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.inference.get()"
+    "client.inference.get().body"
    ]
   },
   {
