--- a/supporting-blog-content/automating-traditional-search/main.ipynb
+++ b/supporting-blog-content/automating-traditional-search/main.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "True"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,6 +35,7 @@
     "import random\n",
     "from datetime import datetime, timedelta\n",
     "import string\n",
+    "from pprint import pprint\n",
     "\n",
     "import pickle\n",
     "load_dotenv()"
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,76 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "profiles = generate_profiles(1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pprint import pprint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'address': {'block': '827',\n",
-      "             'postal_code': '705858',\n",
-      "             'street': 'Commonwealth Avenue',\n",
-      "             'street No.': '756',\n",
-      "             'town': 'Sengkang',\n",
-      "             'unit': '#15-042'},\n",
-      " 'age': 65,\n",
-      " 'blood_type': 'A+',\n",
-      " 'citizenship': 'Singapore PR',\n",
-      " 'country_of_birth': 'Slovakia',\n",
-      " 'cpf_number': 'S8613060M',\n",
-      " 'date_of_birth': '1958-10-05',\n",
-      " 'deceased': False,\n",
-      " 'drivers_license_number': 'S4707782F',\n",
-      " 'education': {'highest_qualification': 'N-Levels',\n",
-      "               'institution': 'Local Polytechnic'},\n",
-      " 'email': 'mjq2n4xlpb@outlook.com',\n",
-      " 'emergency_contact': {'name': 'Deng An Sheng',\n",
-      "                       'phone_number': '+65 8163 9924',\n",
-      "                       'relationship': 'Sibling'},\n",
-      " 'gender': 'Male',\n",
-      " 'height_cm': 166,\n",
-      " 'immigration_status': None,\n",
-      " 'languages': {'spoken': {'Afrikaans': 'Basic', 'Xhosa': 'Native'},\n",
-      "               'written': {'Bengali': 'Native'}},\n",
-      " 'marital_status': 'Married',\n",
-      " 'name': 'Wong Jiu Zhan',\n",
-      " 'national_service': {'rank': 'Captain', 'status': 'NSman'},\n",
-      " 'nric': 'S77385949H',\n",
-      " 'occupation': 'Sociologist',\n",
-      " 'passport_number': 'K8013743A',\n",
-      " 'phone_number': '+65 9395 8462',\n",
-      " 'race': 'Others',\n",
-      " 'religion': 'Taoism',\n",
-      " 'weight_kg': 92}\n"
-     ]
-    }
-   ],
-   "source": [
-    "pprint(profiles[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,8 +552,8 @@
     "    \"institution\": \"string\"\n",
     "  },\n",
     "  \"languages\": {\n",
-    "    \"spoken\": \"object\",\n",
-    "    \"written\": \"object\"\n",
+    "    \"spoken\": {\"language\":\"fluency\" [\"Basic\", \"Conversational\", \"Fluent\", \"Native\"]},\n",
+    "    \"written\": {\"language\":\"fluency\" [\"Basic\", \"Conversational\", \"Fluent\", \"Native\"]},\n",
     "  },\n",
     "  \"height_cm\": \"integer\",\n",
     "  \"weight_kg\": \"integer\",\n",
@@ -689,6 +621,9 @@
     "  }\n",
     "}\n",
     "\n",
+    "When dealing with queries that involve categories, groups, or regions (such as language families, geographical areas, or professional fields), expand the search to include all relevant specific instances. \n",
+    "For example, if asked about Slavic languages, include searches for Russian, Polish, Czech, etc. If asked about people from Europe, include searches for various European countries.\n",
+    "\n",
     "\n",
     "Generate a JSON query for Elasticsearch. Provide only the raw JSON without any surrounding tags or markdown formatting, because we need to convert your response to an object. \n",
     "Use a lenient approach with 'should' clauses instead of strict 'must' clauses. Include a 'minimum_should_match' parameter to ensure some relevance while allowing flexibility. Avoid using 'must' clauses entirely.\n",
@@ -717,7 +652,6 @@
    "outputs": [],
    "source": [
     "query=\"All non-Singaporean men over the age of 25 who are software people living in woodlands\" \n",
-    "\n",
     "response=LLM.generate_non_streaming_response(query, system_prompt=prompt)\n",
     "es_query=json.loads(response)\n",
     "pprint(es_query)"
@@ -785,6 +719,51 @@
     "    print(f\"Deceased: {hit['_source']['deceased']}\")\n",
     "    print(\"---\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query=\"People who speak chinese dialects\" \n",
+    "\n",
+    "response=LLM.generate_non_streaming_response(query, system_prompt=prompt)\n",
+    "es_query=json.loads(response)\n",
+    "pprint(es_query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search_results = es_client.search(index=os.environ.get(\"ELASTIC_DATA_INDEX\"), body=es_query)\n",
+    "\n",
+    "total_hits = search_results['hits']['total']['value']\n",
+    "print(f\"Total matches: {total_hits}\")\n",
+    "\n",
+    "for hit in search_results['hits']['hits']:\n",
+    "    print(f\"Score: {hit['_score']}\")\n",
+    "    print(f\"Name: {hit['_source']['name']}\")\n",
+    "    print(f\"languages: {hit['_source']['languages']}\")\n",
+    "    print(\"---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
