--- a/supporting-blog-content/how-to-use-jina-v2-embeddings/how-to-use-jina-v2-embeddings.ipynb
+++ b/supporting-blog-content/how-to-use-jina-v2-embeddings/how-to-use-jina-v2-embeddings.ipynb
@@ -629,7 +629,7 @@
         "        \"query_vector_builder\": {\n",
         "            \"text_embedding\": {\n",
         "                \"model_id\": \"jina-embeddings-v2-base-en\",\n",
-        "                \"model_text\": \"who inspired taking care of the sea?\",\n",
+        "                \"model_text\": \"berlin\",\n",
         "            }\n",
         "        },\n",
         "        \"k\": 10,\n",
