--- a/notebooks/document-chunking/with-index-pipelines.ipynb
+++ b/notebooks/document-chunking/with-index-pipelines.ipynb
@@ -13,7 +13,14 @@
     "This interactive notebook will:\n",
     "- load the model \"sentence-transformers__all-minilm-l6-v2\" from Hugging Face and into Elasticsearch ML Node\n",
     "- create an index and ingest pipeline that will chunk large fields into smaller passages and vectorize them using the model\n",
-    "- perform a search and return docs with the most relevant passages"
+    "- perform a search and return docs with the most relevant passages\n",
+    "\n",
+    "# Prefer the `semantic_text` field type\n",
+    "\n",
+    "**Elasticsearch version 8.15 introduced the [`semantic_text`](https://www.elastic.co/guide/en/elasticsearch/reference/master/semantic-text.html) field type which handles the chunking process behind the scenes. Before continuing with this notebook, we highly recommend looking into this:**\n",
+    "\n",
+    "- **<https://www.elastic.co/search-labs/blog/semantic-search-simplified-semantic-text>**\n",
+    "- **<https://github.com/elastic/elasticsearch-labs/blob/main/notebooks/search/09-semantic-text.ipynb>**"
    ]
   },
   {
